tests/NormalTests/paczka1/fuzzy1/36159168.err
Error in line 4: q9hx4yE3j A790 27,5
Error in line 8: S403 A498 74,0
Error in line 13: S403 S403 66,7
